<resources>
    <string name="app_name">Culinary Delights</string>
    <string name="nav_converter">Unit Converter</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorites</string>
    <string name="recipe_search_hint">Enter recipe name [min. 3 chars]</string>
    <string name="ingredient_search_hint">Enter ingredients name [min. 3 chars]</string>
    <string name="note">Note: You can enter multiple ingredients separated by comma (,)</string>

    <string name="unit_converter">Unit Converter</string>
    <string name="label_unit_converter">Unit Converter</string>
    <string name="list_name">Grocery List</string>
    <string name="recipe_site">More Recipes On</string>

    <string-array name="units_array">
        <item>Cup</item>
        <item>Table Spoon</item>
        <item>Tea Spoon</item>
        <item>Gram</item>
        <item>Millilitre</item>
        <item>Ounce</item>
    </string-array>

    <string-array name="category_array">
        <item>For You</item>
        <item>Vegetarian</item>
        <item>Breakfast</item>
        <item>Snack</item>
        <item>Appetizer</item>
        <item>Main Course</item>
        <item>Salad</item>
        <item>Dessert</item>
        <item>Drink</item>
    </string-array>

    <string-array name="more_fragment_list">
        <item>Unit Converter</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_search_by_colon">Search By:</string>
    <string name="label_recipes">Recipes</string>
    <string name="label_nutrients">Ingredients</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_see_detail">See Detail</string>
    <string name="label_default_hour">0</string>
    <string name="label_colon"> :</string>
    <string name="label_start_cooking">Start cooking</string>
    <string name="label_timer">Cooking Timer</string>
    <string name="explore">Explore Recipe </string>
    <string name="random_title">Recipe Roulette: Random Delight</string>
    <string name="no_connection">Please check your internet connection and try again later..</string>

</resources>