<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="7dp"
    tools:context=".uis.view.search.SearchFilterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_search_by"
            style="@style/Header.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_search_by_colon"
            android:textSize="18sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_search_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:chipSpacingHorizontal="20dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_recipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/label_recipes"
                android:textColor="@color/text_chip"
                app:chipBackgroundColor="@color/bg_chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_nutrients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/label_nutrients"
                android:textColor="@color/text_chip"
                app:chipBackgroundColor="@color/bg_chip" />


        </com.google.android.material.chip.ChipGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>